# obsidian-ai

./: .env.example  .gitignore  README.md  architecture.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  cost.py  health.py  index.py  notes.py  query.py  settings.py
backend/app/core/: __init__.py  exceptions.py  logging.py
backend/app/models/: __init__.py  cost.py  index.py  llm.py  note.py  query.py  settings.py
backend/app/services/cost/: __init__.py  tracker.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  openai_provider.py  openrouter_provider.py
backend/app/services/notes/: __init__.py  loader.py  parser.py
backend/app/services/query/: __init__.py  service.py
backend/app/services/router/: __init__.py  complexity.py  model_router.py
backend/app/services/search/: __init__.py  sync.py
backend/app/services/storage/: __init__.py  index_db.py  vector_store.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/components/: CostDashboard.tsx  FolderSelector.tsx  IndexStatus.tsx  Markdown.tsx  QueryInput.tsx  ResultsPanel.tsx  SettingsPanel.tsx  ThemeToggle.tsx
frontend/src/hooks/: useStreamingQuery.ts  useTheme.tsx
frontend/src/services/: api.ts
(+2 files in other folders)
